# cs1301lecture

./: Dockerfile  README.md  pyproject.toml
.Trash-0/files/: Untitled.ipynb
.Trash-0/info/: Untitled.ipynb.trashinfo
JupyterNotebooks/: IntroToCs.ipynb
Projects/Project1/src/: main.py  sysPathAppend.py
